--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,6 @@
+{% load static  %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +9,11 @@
     
     <!-- Bootstrap 5 CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Font Awesome Integration -->
+    <script src="https://kit.fontawesome.com/77d8f05410.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     
     {% block extra_head %}{% endblock %}
 </head>
