--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,38 +1,7 @@
 {% extends 'base.html' %}
-
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
-
-<div>
-    <div class="logo">
-        <a class="navbar-brand" href="#">
-            <h1>Florish App</h1>
-        </a>
-    </div>
-    <div class="row">
-        <div class="col-3 navpoint">
-            <div class="point">
-                <i class="fa-solid fa-house"></i>
-                <h3 class="header-h3">Dashboard</h3>
-            </div>
-            <div class="point">
-                <i class="fa-solid fa-house"></i>
-                <h3 class="header-h3">Dashboard</h3>
-            </div>
-            <div class="point">
-                <i class="fa-solid fa-house"></i>
-                <h3 class="header-h3">Dashboard</h3>
-            </div>
-            <div class="point">
-                <i class="fa-solid fa-house"></i>
-                <h3 class="header-h3">Dashboard</h3>
-            </div>
-        </div>
-        <div class="col-9">
-            <h3 class="header-h3">Section B</h3>
-        </div>
-    </div>
-</div>
-
+    <h2>Dashboard</h2>
+    <p>Welcome to Thrift Savings dashboard!</p>
 {% endblock %}
