--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -28,3 +28,29 @@ body {
 .table thead {
   background-color: #a0c3e6;
 }
+
+.overlay{
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 1000;
+}
+
+.popup{
+  background-color: #fff;
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.popup button{
+  margin-top: 20px;
+}
