--- a/templates/base.html
+++ b/templates/base.html
@@ -40,5 +40,6 @@
 
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/popup.js' %}"></script>
 </body>
 </html>
