Worked on the dashboard and created a new models CustomerSaving, Contribution

--- a/templates/customers.html
+++ b/templates/customers.html
@@ -7,7 +7,7 @@
 <p class="text-muted tw-mb-6">Manage customer details and savings records</p>
 <div class="d-flex flex-row col-6 gap-3 align-item-center justify-content-center tw-mb-8">
   <input type="text" class="form-control mb-3 tw-rounded-md" placeholder="Search by name, ID, or phone number" />
-  <a href="{% url 'customers:create-customer' %}" class="align-self-center"><button type="submit" class="btn btn-primary mt-3 tw-shadow-sm">Add</button></a>
+  <!-- <a href="{% url 'customers:create-customer' %}" class="align-self-center"><button type="submit" class="btn btn-primary mt-3 tw-shadow-sm">Add</button></a> -->
 </div>
 
 <table class="table table-hover tw-shadow-md tw-rounded-lg tw-overflow-hidden">
