--- a/templates/customers.html
+++ b/templates/customers.html
@@ -5,10 +5,13 @@
 
 <h2 class="tw-text-2xl tw-font-bold tw-mb-4">Customer Profile</h2>
 <p class="text-muted tw-mb-6">Manage customer details and savings records</p>
-<div class="d-flex flex-row col-6 gap-3 align-item-center justify-content-center tw-mb-8">
-  <input type="text" class="form-control mb-3 tw-rounded-md" placeholder="Search by name, ID, or phone number" />
+<form method="get" action="{% url 'customers:search_customers' %}" class="d-flex flex-row col-6 align-items-center justify-content-center">
+  <input type="text" name="q" class="form-control py-2" placeholder="Search by name, ID, or phone number" />
+  <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
   <!-- <a href="{% url 'customers:create-customer' %}" class="align-self-center"><button type="submit" class="btn btn-primary mt-3 tw-shadow-sm">Add</button></a> -->
-</div>
+
 
 <table class="table table-hover tw-shadow-md tw-rounded-lg tw-overflow-hidden">
     <thead class="tw-bg-gray-100">
