--- a/templates/customers.html
+++ b/templates/customers.html
@@ -9,8 +9,7 @@
   <input type="text" name="q" class="form-control py-2" placeholder="Search by name, ID, or phone number" />
   <button type="submit" class="btn btn-primary">Search</button>
 </form>
-
-  <!-- <a href="{% url 'customers:create-customer' %}" class="align-self-center"><button type="submit" class="btn btn-primary mt-3 tw-shadow-sm">Add</button></a> -->
+<a href="{% url 'customers:create-customer' %}" class="align-self-center"><button type="submit" class="btn btn-danger mt-3 tw-shadow-sm">Add</button></a>
 
 
 <table class="table table-hover tw-shadow-md tw-rounded-lg tw-overflow-hidden">
