--- a/templates/savings/customersavings.html
+++ b/templates/savings/customersavings.html
@@ -7,6 +7,7 @@
     <div class="container">
 <div class="container">
   <h2 class="mb-4">Customers with Savings Plans</h2>
+  <a href="{% url 'savingsplan:createcustomersaving' %}" class="btn btn-primary mb-3">Create Customer Saving</a>
 
   {% if customers %}
     <table class="table table-hover table-bordered">
@@ -27,7 +28,7 @@
             <td>{{ customer.saving.saving_plan.name }}</td>
             <td>{{ customer.saving.saving_plan.start_date }}</td>
             <td>
-              <a href="{% url 'customer_saving_detail' customer.id %}" class="btn btn-sm btn-primary">
+              <a href="{% url 'savingsplan:customer_saving_details' customer.id %}" class="btn btn-sm btn-primary">
                 View Activity
               </a>
             </td>
