--- a/templates/customer_details.html
+++ b/templates/customer_details.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2 class="tw-text-2xl tw-font-bold tw-mb-4">Customer's Details</h2>
-    <p class="tw-mb-6">All about a customer</p>
+    <div class="container px-4">
+        <h2 class="tw-text-2xl tw-font-bold tw-mb-4">Customer's Details</h2>
+        <p class="tw-mb-6">All about a customer</p>
+    </div>
     <div class="container d-flex flex-row tw-bg-gray-50 tw-rounded-lg tw-overflow-hidden">
         <div class="container flex-row">
         <div class="d-flex justify-content-between flex-column gap-5 border-top border-bottom py-2 tw-hover:tw-bg-gray-100">
@@ -33,7 +35,7 @@
         </div>
     </div>
     </div>
-    <div class="d-flex flex-row gap-3">
+    <div class="d-flex flex-row gap-3 pt-3 container px-4">
         <a href="{% url 'customers:edit-customer' customer.id %}"><button type="submit" class="btn btn-primary py-2">Edit Customer</button></a>
         <a href="{% url 'customers:delete-customer' customer.id %}"><button type="submit" class="btn btn-danger py-2">Delete Customer</button></a>
     </div>
