Update: Updated the customer_details html

--- a/templates/customer_details.html
+++ b/templates/customer_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container px-4">
+    <div class="container px-4 d-flex justify-content-center">
         <h2 class="tw-text-2xl tw-font-bold tw-mb-4">Customer's Details</h2>
         <p class="tw-mb-6">All about a customer</p>
     </div>
